--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -18,7 +18,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision :chef_solo do |chef|
-    chef.cookbooks_path = [ "cookbooks", "~/.chef/cookbooks/" ]
+    chef.cookbooks_path = [ "cookbooks" ]
     chef.add_recipe("apt")
     chef.add_recipe("sawmill::dev")
     chef.json = {}
